--- a/supprimer.facture.html
+++ b/supprimer.facture.html
@@ -20,7 +20,7 @@
         <form action="supprimer.facture.php" method="post" onsubmit="return confirmDelete()">
             <div class="form-group">
                 <label for="numeroFacture">Numéro de la facture :</label>
-                <input type="text" name="numeroFatcure" id="numeroFacture" class="form-control" required placeholder="Entrez le numéro de la facture">
+                <input type="text" name="numeroFacture" id="numeroFacture" class="form-control" required placeholder="Entrez le numéro de la facture">
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-danger">Supprimer</button>
