ajout menu déroulant assurabilité

--- a/home.patient.html
+++ b/home.patient.html
@@ -13,7 +13,7 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des Patients</h1>
         <div class="button-row">
-            <a href="ajout.patient.html" class="btn1">Ajouter</a>
+            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter</a>
             <a href="afficher.patient.html" class="btn1">Afficher</a>
             <a href="supprimer.patient.html" class="btn1">Supprimer</a>
             <a href="modifier.patient.html" class="btn1">Modifier</a>
