affichage de l'assurabilité du patient

--- a/afficher.patient.html
+++ b/afficher.patient.html
@@ -26,6 +26,7 @@
                     <th>Ville</th>
                     <th>Sexe</th>
                     <th>Numéro Inami</th>
+                    <th>Assurabilité</th>
                     <th>Action</th>
                 </tr>
             </thead>
