--- a/home.visite.html
+++ b/home.visite.html
@@ -16,7 +16,7 @@
             <a href="ajout.visite.patient.final.php" class="btn1">Ajouter visite</a>
             <a href="afficher.visite.html" class="btn1">Afficher</a>
             <a href="supprimer.visite.html" class="btn1">Supprimer</a>
-            <a href="modifier.visite.html" class="btn1">Modifier</a>
+            <a href="modifier.visite.soins.php" class="btn1">Modifier</a>
             <a href="afficher.calendrier.php" class="btn1">Calendrier</a>
             <a href="home.html" class="btn1">RETOUR MENU</a>
         </div>
