cahngement du home + facturation

--- a/home.facturation.html
+++ b/home.facturation.html
@@ -16,7 +16,7 @@
             <a href="ajout.facture.html" class="btn1">Ajouter ses factures</a>
             <a href="afficher.facture.php" class="btn1">Afficher ses factures</a>
             <a href="supprimer.facture.html" class="btn1">Supprimer une facture</a>
-            <a href="home.html" class="btn1">RETOUR MENU</a>
+            <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
 </body>
