--- a/home.patient.html
+++ b/home.patient.html
@@ -17,7 +17,7 @@
             <a href="afficher.patient.html" class="btn1">Afficher</a>
             <a href="supprimer.patient.html" class="btn1">Supprimer</a>
             <a href="modifier.patient.html" class="btn1">Modifier</a>
-            <a href="home.html" class="btn1">RETOUR MENU</a>
+            <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
 </body>
