--- a/home.rapport.html
+++ b/home.rapport.html
@@ -17,7 +17,7 @@
             <a href="afficher.rapport.html" class="btn1">Afficher</a>
             <a href="supprimer.rapport.html" class="btn1">Supprimer</a>
             <a href="update.rapport.html" class="btn1">Modifier</a>
-            <a href="home.html" class="btn1">RETOUR MENU</a>
+            <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
 </body>
