--- a/home.visite.html
+++ b/home.visite.html
@@ -18,7 +18,7 @@
             <a href="supprimer.visite.html" class="btn1">Supprimer</a>
             <a href="modifier.visite.soins.php" class="btn1">Modifier</a>
             <a href="afficher.calendrier.php" class="btn1">Calendrier</a>
-            <a href="home.html" class="btn1">RETOUR MENU</a>
+            <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
 </body>
