--- a/connexion.html
+++ b/connexion.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <body>
         <div class="container">
-            <h2>Page de connexion</h2>
+            <h2>Page de connexion DOMIS</h2>
             <form action="verifier_connexion.php" method="post">
                 <div class="form-group">
                     <label for="inami">Numéro INAMI</label>
