menu déroulant pour modifier patient

--- a/home.patient.html
+++ b/home.patient.html
@@ -16,7 +16,7 @@
             <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter</a>
             <a href="afficher.patient.html" class="btn1">Afficher</a>
             <a href="supprimer.patient.html" class="btn1">Supprimer</a>
-            <a href="modifier.patient.html" class="btn1">Modifier</a>
+            <a href="modifier.patient.assurabilité.php" class="btn1">Modifier</a>
             <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
