--- a/afficher.rapport.html
+++ b/afficher.rapport.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <div class="w3-container">
-        <p><button class="w3-button w3-orange w3-round"><a href="home.rapport.html" class="text-white">RETOUR ACCUEIL</a></button></p>
+        <div class="col">
+            <button class="btn btn-primary" style="margin-top: 32px;">
+                <a href="home.rapport.html" style="color: white; text-decoration: none;">Retour</a>
+            </button>
+        </div>
         <h1 class="text-center mb-4">Liste des Rapports</h1>
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
