--- a/ajout.facture.html
+++ b/ajout.facture.html
@@ -15,7 +15,7 @@
             </div>
 
             <h1 class="text-center mb-4">Ajouter ses factures</h1>
-            <form action="ajout.facture.php" method="POST">
+            <form action="ajouter_facturation.php" method="POST">
 
                 <div class="form-group">
                     <label for="dateDebut">Date de début de la période à facturer</label>
