Message décrivant les modifications

--- a/afficher.visite.html
+++ b/afficher.visite.html
@@ -18,9 +18,11 @@
             <thead class="thead-dark">
                 <tr>
                     <th>Numéro de la visite</th>
+                    <th>Nom du patient</th>
+                    <th>Prénom du patient</th>
                     <th>Date de la visite</th>
-                    <th>Frequence du soin</th>
                     <th>Brève description du soin</th>
+                    <th>Fréquence du soin</th>
                     <th>Heure de la visite</th>
                     <th>Numéro de rapport associé</th>
                     <th>Action</th>
