Modification des boutons

--- a/home.rapport.html
+++ b/home.rapport.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-5 text-center">
-        <h1 class="mb-4">Gestion des RAPPORT</h1>
+        <h1 class="mb-4">Gestion des rapports</h1>
         <div class="button-row">
             <a href="ajout.rapport.visite.php" class="btn1">Ajouter</a>
             <a href="afficher.rapport.html" class="btn1">Afficher</a>
