--- a/afficher.visite.html
+++ b/afficher.visite.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <div class="w3-container">
-        <p><button class="w3-button w3-orange w3-round"><a href="home.visite.html">RETOUR</a> </button></p>
+        <div class="col">
+            <button class="btn btn-primary" style="margin-top: 32px;">
+            <a href="home.visite.html" style="color: white; text-decoration: none;">Retour</a>
+            </button>
+        </div>
         <h1 class="text-center mb-4">Liste des visites</h1>
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
