--- a/home.visite.html
+++ b/home.visite.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-5 text-center">
-        <h1 class="mb-4">Gestion des Visites</h1>
+        <h1 class="mb-4">Gestion des visites</h1>
         <div class="button-row">
             <a href="ajout.visite.patient.final.php" class="btn1">Ajouter visite</a>
             <a href="afficher.visite.html" class="btn1">Afficher</a>
