--- a/update.rapport.html
+++ b/update.rapport.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="col">
+        <button class="btn btn-primary" style="margin-top: 32px;">
+            <a href="home.rapport.html" style="color: white; text-decoration: none;">Retour</a>
+        </button>
+    </div>
     <title>Modification d'un rapport</title> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Modification d'un rapport</h1>
-        <h2>Modification un rapport</h2>
         
         <form action="update.rapport.php" method="post">
             <div class="form-group">
