--- a/afficher.rapport.html
+++ b/afficher.rapport.html
@@ -23,8 +23,11 @@
             <thead class="thead-dark">
                 <tr>
                     <th>ID Rapport</th>
+                    <th>nom patient</th>
+                    <th>prenom </th>
                     <th>Évaluation Traitement</th>
                     <th>Observation Clinique</th>
+                    
                     <th>Action</th>
                 </tr>
             </thead>
