--- a/afficher.patient.html
+++ b/afficher.patient.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="col">
+        <button class="btn btn-primary" style="margin-top: 32px;">
+            <a href="home.patient.html" style="color: white; text-decoration: none;">Retour</a>
+        </button>
+    </div>
 
     <title>Liste des Patients</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
