--- a/page.echelle.katz.html
+++ b/page.echelle.katz.html
@@ -243,7 +243,7 @@
         };
 
         const summaryText = `
-            Résumé : 
+            score Katz : 
             ${choices.se_laver}, 
             ${choices.s_habiller}, 
             ${choices.transfert},
