pré-remplissage+ bouton changement

--- a/home.visite.html
+++ b/home.visite.html
@@ -13,11 +13,11 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des visites</h1>
         <div class="button-row">
-            <a href="ajout.visite.patient.final.php" class="btn1">Ajouter visite</a>
-            <a href="afficher.visite.html" class="btn1">Afficher</a>
-            <a href="supprimer.visite.html" class="btn1">Supprimer</a>
-            <a href="modifier.visite.soins.php" class="btn1">Modifier</a>
-            <a href="afficher.calendrier.php" class="btn1">Calendrier</a>
+            <a href="ajout.visite.patient.final.php" class="btn1">Ajout visite</a>
+            <a href="afficher.visite.html" class="btn1">Afficher visite(s)</a>
+            <a href="supprimer.visite.html" class="btn1">Supprimer visite</a>
+            <a href="modifier.visite.soins.php" class="btn1">Modifier visite</a>
+            <a href="afficher.calendrier.php" class="btn1">Calendrier visites</a>
             <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
