--- a/home.patient.html
+++ b/home.patient.html
@@ -13,10 +13,10 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des patients</h1>
         <div class="button-row">
-            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter</a>
-            <a href="afficher.patient.html" class="btn1">Afficher</a>
-            <a href="supprimer.patient.html" class="btn1">Supprimer</a>
-            <a href="modifier.patient.assurabilité.php" class="btn1">Modifier</a>
+            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter patient</a>
+            <a href="afficher.patient.html" class="btn1">Afficher patient(s)</a>
+            <a href="supprimer.patient.html" class="btn1">Supprime patient</a>
+            <a href="modifier.patient.assurabilité.php" class="btn1">Modifier patient</a>
             <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
