--- a/home.rapport.html
+++ b/home.rapport.html
@@ -13,10 +13,10 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des rapports</h1>
         <div class="button-row">
-            <a href="ajout.rapport.visite.php" class="btn1">Ajouter</a>
-            <a href="afficher.rapport.html" class="btn1">Afficher</a>
-            <a href="supprimer.rapport.html" class="btn1">Supprimer</a>
-            <a href="update.rapport.html" class="btn1">Modifier</a>
+            <a href="ajout.rapport.visite.php" class="btn1">Ajout rapport</a>
+            <a href="afficher.rapport.html" class="btn1">Afficher rapport</a>
+            <a href="supprimer.rapport.html" class="btn1">Supprimer rapport</a>
+            <a href="update.rapport.page.php" class="btn1">Modifier rapport </a>
             <a href="home.php" class="btn1">RETOUR MENU</a>
         </div>
     </div>
