Modif des suppression et modifier pour les messages d'erreurs

--- a/home.rapport.html
+++ b/home.rapport.html
@@ -13,11 +13,11 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des rapports</h1>
         <div class="button-row">
-            <a href="ajout.rapport.visite.php" class="btn1">Ajout rapport</a>
-            <a href="afficher.rapport.html" class="btn1">Afficher rapport</a>
-            <a href="supprimer.rapport.html" class="btn1">Supprimer rapport</a>
-            <a href="update.rapport.page.php" class="btn1">Modifier rapport </a>
-            <a href="home.php" class="btn1">RETOUR MENU</a>
+            <a href="ajout.rapport.visite.php" class="btn1">Ajouter un rapport</a>
+            <a href="afficher.rapport.html" class="btn1">Afficher les rapports</a>
+            <a href="suppression.rapport.php" class="btn1">Supprimer un rapport</a>
+            <a href="update.rapport.page.php" class="btn1">Modifier un rapport </a>
+            <a href="home.php" class="btn1">Retour Menu</a>
         </div>
     </div>
 </body>
