--- a/home.facturation.html
+++ b/home.facturation.html
@@ -13,10 +13,10 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion de la facturation</h1>
         <div class="button-row">
-            <a href="ajout.facture.html" class="btn1">Ajouter ses factures</a>
+            <a href="ajout.facture.html" class="btn1">Créer une facture</a>
             <a href="afficher.facture.php" class="btn1">Afficher ses factures</a>
-            <a href="supprimer.facture.html" class="btn1">Supprimer une facture</a>
-            <a href="home.php" class="btn1">RETOUR MENU</a>
+            <a href="supprimer.facture.php" class="btn1">Supprimer une facture</a>
+            <a href="home.php" class="btn1">Retour Menu</a>
         </div>
     </div>
 </body>
