--- a/home.patient.html
+++ b/home.patient.html
@@ -13,11 +13,11 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des patients</h1>
         <div class="button-row">
-            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter patient</a>
-            <a href="afficher.patient.html" class="btn1">Afficher patient(s)</a>
-            <a href="supprimer.patient.html" class="btn1">Supprime patient</a>
-            <a href="modifier.patient.assurabilité.php" class="btn1">Modifier patient</a>
-            <a href="home.php" class="btn1">RETOUR MENU</a>
+            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter un patient</a>
+            <a href="afficher.patient.html" class="btn1">Afficher les patients</a>
+            <a href="supprimer.patient.php" class="btn1">Supprimer un patient</a>
+            <a href="modifier.patient.assurabilité.php" class="btn1">Modifier un patient</a>
+            <a href="home.php" class="btn1">Retour menu</a>
         </div>
     </div>
 </body>
