--- a/home.visite.html
+++ b/home.visite.html
@@ -14,7 +14,7 @@
         <h1 class="mb-4">Gestion des visites</h1>
         <div class="button-row">
             <a href="ajout.visite.patient.final.php" class="btn1">Ajouter une visite</a>
-            <a href="afficher.visite.html" class="btn1">Afficher les visites</a>
+            <a href="afficher.visite.php" class="btn1">Afficher les visites</a>
             <a href="supprimer.visite.php" class="btn1">Supprimer une visite</a>
             <a href="modifier.visite.soins.php" class="btn1">Modifier une visite</a>
             <a href="afficher.calendrier.php" class="btn1">Calendrier des visites</a>
