--- a/home.patient.html
+++ b/home.patient.html
@@ -13,7 +13,7 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des patients</h1>
         <div class="button-row">
-            <a href="ajout.patient.assurabilite.php" class="btn1">Ajouter un patient</a>
+            <a href="ajout.patient.php" class="btn1">Ajouter un patient</a>
             <a href="afficher.patient.php" class="btn1">Afficher les patients</a>
             <a href="supprimer.patient.php" class="btn1">Supprimer un patient</a>
             <a href="modifier.patient.assurabilité.php" class="btn1">Modifier un patient</a>
