--- a/home.rapport.html
+++ b/home.rapport.html
@@ -13,7 +13,7 @@
     <div class="container mt-5 text-center">
         <h1 class="mb-4">Gestion des rapports</h1>
         <div class="button-row">
-            <a href="ajout.rapport.final.php" class="btn1">Ajouter un rapport</a>
+            <a href="ajout.rapport.php" class="btn1">Ajouter un rapport</a>
             <a href="afficher.rapport.php" class="btn1">Afficher les rapports</a>
             <a href="suppression.rapport.php" class="btn1">Supprimer un rapport</a>
             <a href="update.rapport.page.php" class="btn1">Modifier un rapport </a>
